<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context=".LoginFragment"
                android:background="@drawable/loginback2">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="40dp"
            android:paddingVertical="20dp"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:id="@+id/title2" />

    <ImageView
            android:id="@+id/chart"
            android:src="@drawable/chart6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="100dp"
            android:layout_below="@+id/title2"
            tools:ignore="MissingConstraints"/>


    <EditText
            android:id="@+id/usernameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:hint="Username"
            android:ems="10"
            android:layout_below="@+id/chart"/>

    <EditText
            android:id="@+id/passwordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:layout_below="@+id/usernameInput"/>
    <Button
            android:id="@+id/loginSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Submit"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:layout_below="@+id/passwordInput"/>

    <TextView
            android:id="@+id/registerHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Click here to Register"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>

    <!--    android:inputType="textPassword"-->

</RelativeLayout>