...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:ignore="MissingConstraints"/>
    <Button
            android:id="@+id/instructionsbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Instructions"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/themoon"/>
    <Button
            android:id="@+id/nextbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Lets Go!"
            android:textColor="@color/black"
            android:textSize="20dp"
...
